# Rust-API

./: Cargo.toml  README.md  data.db
migrations/2023-10-15-160741_create_tasks_and_users/: up.sql
src/: database.rs  main.rs  schema.rs
src/database/: requests.rs  responses.rs
